# bias_correction

./: .gitignore  README.md  env.yml  pyproject.toml  setup.py  start.R  start.py
examples/: start.R  start.py
examples/etc/: get_data.py  test_data.csv
process/python/: __init__.py  bc.py  data.py  eval.py  method.py  predict.py  train.py  vis.py
process/r/: bc.R  constants.R  data.R  eval.R  method.R  predict.R  train.R  vis.R
simple_bc/: bc.R  bc.py
