[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_bc"
version = "0.1.0"
description = "A simple package for simple bias correction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["xgboost", "matplotlib", "pandas"]  # List dependencies here